[build-system]
build-backend = "cmeel.build"
requires = ["cmeel[build]"]

[project]
description = "cmeel distribution for autoconf"
license = "GPL-3.0-or-later"
name = "cmeel-autoconf"
requires-python = ">= 3.8"
version = "2.71"

[project.urls]
homepage = "https://github.com/cmake-wheel/cmeel-autoconf"
repository = "https://github.com/cmake-wheel/cmeel-autoconf.git"

[tool.cmeel]
build-number = 3
py3-none = true
run-tests = false

[tool.tomlsort]
all = true
