[build-system]
build-backend = "cmeel"
requires = ["cmeel-m4", "cmeel[build]"]

[project]
description = "cmeel distribution for autoconf"
license = "GPL-3.0-or-later"
name = "cmeel-autoconf"
requires-python = ">= 3.9"
version = "2.72.0.1"

[project.urls]
homepage = "https://github.com/cmake-wheel/cmeel-autoconf"
repository = "https://github.com/cmake-wheel/cmeel-autoconf.git"
upstream = "https://www.gnu.org/software/autoconf/"

[tool.cmeel]
has-sitelib = false
run-tests = false
upstream-version = "2.72"

[tool.tomlsort]
all = true
